# bitwise-connect4

./: CMakeLists.txt  README.md  bitboard.c  bitboard.h  bitmask.c  bitmask.h  main.c
